# desk-buddy-orchestrator

./: Cargo.toml  Dockerfile  entrypoint.sh
k3s/: orchestrator-deployment.yaml
src/: main.rs
src/audio/: capture.rs  devices.rs  mod.rs  playback.rs
src/config/: mod.rs
src/llm/: client.rs
src/pipeline/: voice.rs
src/stt/: client.rs
src/tts/: client.rs
src/vad/: detector.rs
src/wake_word/: detector.rs
