[package]
name = "jarvis-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Audio I/O
cpal = "0.15"
hound = "3"
rubato = "0.14"            # resampling: 48kHz stereo → 16kHz mono

# Wake word
tract-onnx = "0.21"

# VAD
webrtc-vad = "0.4"

# HTTP client (STT, TTS, LLM) — Phase 3
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
bytes = "1"
futures-util = "0.3"       # StreamExt for response byte streaming

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI args (orchestrator startup flags)
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"

# Phase 4+ dependencies (added later)
# axum = { version = "0.7", features = ["json", "ws"] }
# tower = "0.5"
# uuid = { version = "1", features = ["v4"] }
# chrono = { version = "0.4", features = ["serde"] }

[profile.release]
strip = true
lto = true
